Proyecto completo listo para Render

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,37 @@
-# Dependencias
+# 📦 Dependencias
 node_modules/
 
-# Variables de entorno
-.env
-
-# Logs
-logs/
-*.log
-
-# Compilados
+# 🏗️ Archivos de build
 dist/
 build/
+
+# 🔐 Variables de entorno
+.env
+.env.local
+.env.*.local
+
+# ⚙️ Configuración de IDE
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# 🗂️ Archivos del sistema
+.DS_Store
+Thumbs.db
+
+# 📄 Logs y temporales
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+
+# 🧪 Coverage y pruebas
+coverage/
+*.lcov
+
+# 🧩 Archivos generados
+*.cache
+*.tmp
+*.bak
